# server/routes/web.php
@@ -15,26 +15,29 @@ Route::get('/', function () {
     return view('welcome');
 });
 
-// Authentication Routes...
-Route::get('auth/login', 'Auth\LoginController@showLoginForm')->name('login');
-Route::post('auth/login', 'Auth\LoginController@login');
-Route::post('logout', 'Auth\LoginController@logout')->name('logout');
+Route::group(['middleware' => 'apikey'], function () {
+    // Authentication Routes...
+    Route::post('auth/login', 'Auth\LoginController@login');
+    Route::post('logout', 'Auth\LoginController@logout')->name('logout');
 
-Route::get('auth/signup', 'Auth\RegisterController@showRegistrationForm')->name('register');
-Route::post('auth/signup', 'Auth\RegisterController@register');
+    Route::post('auth/signup', 'Auth\RegisterController@register');
 
-// Password Reset Routes...
-Route::get('password/reset', 'Auth\ForgotPasswordController@showLinkRequestForm')->name('password.request');
-Route::post('password/email', 'Auth\ForgotPasswordController@sendResetLinkEmail')->name('password.email');
-Route::get('password/reset/{token}', 'Auth\ResetPasswordController@showResetForm')->name('password.reset');
-Route::post('password/reset', 'Auth\ResetPasswordController@reset')->name('password.update');
+    // Password Reset Routes...
+    Route::post('password/email', 'Auth\ForgotPasswordController@sendResetLinkEmail')->name('password.email');
+    Route::get('password/reset/{token}', 'Auth\ResetPasswordController@showResetForm')->name('password.reset');
+    Route::post('password/reset', 'Auth\ResetPasswordController@reset')->name('password.update');
 
 
-Route::get('/home', 'HomeController@index')->name('home');
+    Route::get('/home', 'HomeController@index')->name('home');
 
-// Management
-Route::group(['middleware' => ['role:management']], function () {
+    // Management
+    Route::group(['middleware' => ['auth:students,managements', 'role:management']], function () {
 
-    Route::get('/management/jobs', 'JobController@index')->name('jobs');
+        Route::get('/management/jobs', 'JobController@index')->name('jobs');
+
+        Route::resource('/management/students', 'StudentController');
+
+    });
 
 });
+
